--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.4.3",
     "@types/node": "20.8.8",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.4",
     "typescript": "5.2.2"
   }
