--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.4.3",
     "@types/node": "20.8.8",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "jwt-decode": "^4.0.0",
     "next": "13.5.6",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -24,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
     "tailwindcss": "3.3.4",
     "typescript": "5.2.2"
   }
