--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "flowbite-react": "^0.6.4",
     "jwt-decode": "^4.0.0",
     "next": "13.5.6",
     "postcss": "8.4.31",
@@ -30,6 +31,8 @@
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.4",
     "typescript": "5.2.2"
   }
