--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
@@ -25,6 +26,8 @@
     "next": "13.5.6",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-calendar": "^4.6.1",
+    "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
