--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/stripe-js": "^2.1.11",
     "@tanstack/react-query": "^5.4.3",
     "@types/node": "20.8.8",
     "@types/react": "18.2.31",
