--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
+    "recharts": "^2.10.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.4",
     "typescript": "5.2.2"
