--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
+    "bufferutil": "^4.0.8",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
@@ -38,7 +39,11 @@
     "react-slick": "^0.29.0",
     "recharts": "^2.10.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.4",
-    "typescript": "5.2.2"
+    "timeago.js": "^4.0.2",
+    "typescript": "5.2.2",
+    "utf-8-validate": "^5.0.10",
+    "ws": "^8.14.2"
   }
 }
