--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/stripe-js": "^2.1.11",
@@ -25,6 +26,7 @@
     "eslint-config-next": "13.5.6",
     "flowbite-react": "^0.6.4",
     "jwt-decode": "^4.0.0",
+    "mapbox-gl": "^2.0.0",
     "next": "13.5.6",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -34,16 +36,23 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-map-gl": "^7.1.6",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "recharts": "^2.10.1",
+    "sharp": "^0.33.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
+    "supercluster": "^8.0.1",
     "tailwindcss": "3.3.4",
     "timeago.js": "^4.0.2",
     "typescript": "5.2.2",
     "utf-8-validate": "^5.0.10",
     "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.7",
+    "@types/supercluster": "^7.1.3"
   }
 }
