--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next --port 5000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -22,7 +22,6 @@
     "bufferutil": "^4.0.8",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
-    "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
     "flowbite-react": "^0.6.4",
     "jwt-decode": "^4.0.0",
@@ -53,6 +52,10 @@
   },
   "devDependencies": {
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.7",
-    "@types/supercluster": "^7.1.3"
+    "@types/react-slick": "^0.23.13",
+    "@types/supercluster": "^7.1.3",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0"
   }
 }
