--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sharp": "^0.33.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
+    "sonner": "^1.4.41",
     "supercluster": "^8.0.1",
     "tailwindcss": "3.3.4",
     "timeago.js": "^4.0.2",
